--- a/src/components/ListingResultCard/ListingResultCard.module.css
+++ b/src/components/ListingResultCard/ListingResultCard.module.css
@@ -49,7 +49,6 @@
 }
 
 .price {
-  /* Layout */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -138,60 +137,118 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 20px;
-  border-left: 10px solid #A91722;
-  align-items: center;
+  /* align-items: center; */
   padding: 15px;
-  border-radius: 10px;
+  border-radius: 0;
+  border-left: 7px solid #a91722;
+  box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.2);
+  @media (max-width: 767px) {
+    flex-direction: column;
+  }
+}
+.dmuser {
+  display: flex;
+  flex-basis: calc(100% - 200px);
+  align-items: center;
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+  @media (max-width: 575px) {
+    flex-direction: column;
+    padding: 10px 0 0;
+  }
+}
+.listingInfo {
+  flex-basis: calc(100% - 20px);
+  padding: 0 35px 0 0;
+  word-break: break-all;
+  line-height: 20px;
+  border-right: 1px solid rgb(201, 198, 198);
+  /* border-left: 1px solid rgb(201, 198, 198); */
+  min-height: 80px;
+  /* align-items: center; */
+  display: flex;
+  font-size: 14px;
+  flex-direction: column;
+  justify-content: center;
+
+  @media (max-width: 767px) {
+    width: 100%;
+    border-right: 0;
+    min-height: none;
+    flex-basis: 100%;
+    padding: 0;
+  }
+  @media (max-width: 575px) {
+    min-height: auto;
+    border-right: 0;
+    padding: 0;
+  }
+}
+.listingTitle {
+  margin: 0px 0 10px;
+  line-height: 20px;
+  font-weight: 600;
+  color: #000;
+}
+/* .price {
+  font-size: 14px;
+  font-weight: 200;
+} */
+.listingDescription {
+  margin: 0px;
+}
+.price {
+  padding: 0 10px 0 0;
+  margin: 0px;
+  align-items: center;
+  color: #a91722;
+  font-weight: 800;
+}
+.bookingContent {
+  padding: 15px 0 0;
+  display: flex;
+  align-items: center;
+  @media (max-width: 767px) {
+    margin: 0 0 0 auto;
+    flex-basis: 40%;
+  }
+  @media (max-width: 575px) {
+    padding: 10px 0 0;
+    width: 100%;
+  }
+}
+.userContent {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 20px;
+  max-width: 350px;
+  flex-basis: 350px;
+  @media (max-width: 767px) {
+    flex-direction: row;
+    flex-basis: auto;
+    width: 100%;
+    max-width: 100%;
+    padding: 10px 0;
+  }
   @media (max-width: 575px) {
     flex-direction: column;
   }
 }
-.listingInfo{
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    display: flex;
-    flex-direction: column;
-    
-}
-.listingTitle{
-    margin: 0px;
-}
-.listingDescription{
-    margin: 0px
-}
-.price{
-    padding: 10px;
-    margin: 0px;
-    align-items: center;
-    color: #A91722;
-    
-}
-.bookingContent{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10px;
-    border-left: 2px solid rgb(201, 198, 198);
-}
-.userContent{
-    display: flex;
-    flex-direction: row;
-    padding-left: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 20px;
-    border-right: 2px solid rgb(201, 198, 198);
+.avtrpp {
+  display: flex;
+  align-items: center;
 }
 .userInfo {
   margin-left: 10px;
-  justify-items: center;
   text-transform: capitalize;
-  @media (max-width: 575px) {
-    text-align: center;
+  /* @media (max-width: 575px) {
+ 
     margin: 10px 0;
-  }
+  } */
   & .userName {
     font-size: 14px;
     color: #38394e;
@@ -200,10 +257,13 @@
   }
 }
 .profileBtnContainer {
-  margin-left: auto;
-  /* margin-right: 20px; */
+  width: calc(100% - 74px);
+  margin: 0 0 0 auto;
+  @media (max-width: 767px) {
+    width: calc(100% - 8px);
+  }
   @media (max-width: 575px) {
-    margin-right: auto;
+    width: calc(100% - 50%);
   }
 }
 .profileBtn {
@@ -218,7 +278,7 @@
   font-weight: 300;
   cursor: pointer;
   border: 0;
-  max-width: 200px;
+  max-width: 100%;
   line-height: 20px;
 }
 .profileBtn:hover {
