--- a/src/containers/SearchPage/PromotionPage.module.css
+++ b/src/containers/SearchPage/PromotionPage.module.css
@@ -56,3 +56,18 @@
   text-align: center;
   color: var(--marketplaceColor);
 }
+.listingCards {
+  padding: 0 24px 96px 24px;
+
+  margin: 10px auto;
+  width: 100%;
+  max-width: 1040px;
+  /* @media (--viewportMedium) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  } */
+  @media (--viewportLarge) {
+    padding: 0 36px 96px 36px;
+  }
+}
