--- a/src/containers/ListingPage/ListingPage.module.css
+++ b/src/containers/ListingPage/ListingPage.module.css
@@ -240,7 +240,7 @@
     padding: 30px;
     border: 1px solid #e3e3e3;
     border-radius: 10px;
-    max-height: 540px;
+    /* max-height: 540px; */
 
     /* padding-left: 60px; */
 
