--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -39,28 +39,28 @@
 
 .listingPanel {
   width: 100%;
-  margin: 24px auto 0 auto;
+  margin: 24px auto;
   /* overflow-x: hidden; */
 
   @media (--viewportMedium) {
-    margin: 48px auto 0 auto;
+    margin: 48px auto;
   }
 
   @media (--viewportLarge) {
-    margin: 80px auto 0 auto;
-    max-width: 800px;
+    margin: 50px auto;
+    max-width: 1040px;
   }
 }
 
 .title {
-  margin: 0 24px 24px 24px;
-
-  @media (--viewportMedium) {
-    margin: 0 24px 48px 24px;
-  }
-
-  @media (--viewportLarge) {
-    margin: 0 36px 48px 36px;
+  margin: 0;
+  color: #4a4a4a;
+  font-size: 30px;
+  font-weight: 400;
+  border-bottom: 1px solid #d2d2d2;
+  padding: 0 0 20px;
+  @media (max-width: 1023px) {
+    padding: 0 15px 20px;
   }
 }
 
@@ -148,34 +148,51 @@
 
 .heading {
   position: relative;
-  width: 80vw;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  color: var(--marketplaceColor);
+  /* width: 80vw; */
+  max-width: 1020px;
+  margin: 0 auto 25px;
 }
-
+.listingrow {
+  display: flex;
+  flex-wrap: wrap;
+  @media (max-width: 767px) {
+    flex-direction: column;
+    padding: 0 15px;
+  }
+}
 /* horizontaldesign */
 .horizontalcard {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-left: brown 5px solid;
   display: flex;
   flex-direction: row;
-  margin: 20px 0px;
+  margin: 20px 10px;
   position: relative;
+  max-width: 48%;
+  flex-basis: 48%;
+
   @media (max-width: 1023px) {
-    max-width: 95%;
-    margin: 20px auto;
+    margin: 10px auto;
+  }
+  @media (max-width: 767px) {
+    max-width: 100%;
+    flex-basis: 100%;
+    width: 100%;
   }
   @media (max-width: 575px) {
     flex-direction: column;
-    padding: 8px;
+    padding: 15px 8px;
   }
 }
 .lefthorizontal {
-  width: 80%;
-  padding-left: 10px;
+  width: 75%;
+  padding: 0 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @media (max-width: 991px) {
+    padding: 15px 15px;
+  }
   @media (max-width: 767px) {
     width: 70%;
   }
@@ -187,8 +204,10 @@
 .lefttitle {
   font-size: 20px;
   font-weight: bold;
-  padding-top: 50px;
+  /* padding-top: 50px; */
   color: black;
+  line-height: 25px;
+  margin: 0 0 8px;
   @media (max-width: 575px) {
     padding: 0;
   }
@@ -200,7 +219,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20%;
+  width: 50%;
   padding-bottom: 20px;
   /* box-shadow: -3px 0px 2px 0px #aaaaaa; */
   border-left: rgb(179, 172, 172) 1px solid;
@@ -228,10 +247,10 @@
 }
 .span {
   background-color: #ebffef;
-  padding: 2px 2px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 5px 20px;
   color: #2db10b;
+  font-size: 13px;
+  font-weight: 100;
 }
 .editbutton {
   background-color: #2db10b;
