--- a/src/forms/BookingTimeForm/FieldDateAndTimeInput.module.css
+++ b/src/forms/BookingTimeForm/FieldDateAndTimeInput.module.css
@@ -9,9 +9,9 @@
   flex-shrink: 0;
 
   /* This container uses flexbox layout */
-  display: flex;
+  /* display: flex; */
   justify-content: space-between;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 
   width: 100%;
   margin-top: 30px;
@@ -38,6 +38,7 @@
 
     &:nth-child(2n) {
       margin-top: unset;
+      width: auto;
     }
   }
 }
