--- a/src/twilio/components/Buttons/ChatButton.module.css
+++ b/src/twilio/components/Buttons/ChatButton.module.css
@@ -1,14 +1,3 @@
-#first {
-  width: 50vw;
-}
-#sec {
-  display: flex;
-  justify-content: space-between;
-}
-#third {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 50vh;
+.button {
+  border: 0px;
 }
