--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -136,7 +136,56 @@
     margin-right: 0;
   }
 }
+.label {
+  text-shadow: #4a4a4a;
+  font-size: 17px;
+  padding: 5px;
+}
+.lformrow {
+  top: 286px;
+  left: 64px;
+  width: 1040px;
+  height: 51px;
 
+  /* background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  border-radius: 5px;
+  opacity: 1; */
+  display: flex;
+  flex-direction: row;
+  margin-left: 490px;
+  margin-right: 490px;
+  justify-content: space-between;
+}
+.statusFilter {
+  top: 286px;
+  left: 558px;
+  width: 464px;
+  height: 51px;
+  /* UI Properties */
+  /* background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  border-radius: 5px;
+  opacity: 1; */
+  margin-right: 15px;
+  margin-left: 15px;
+}
+.categoryFilter {
+  top: 286px;
+  left: 64px;
+  width: 464px;
+  height: 51px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+.areaOfLawFilter {
+  top: 286px;
+  left: 867px;
+  width: 436px;
+  height: 51px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
 .pagination {
   /* margin-top: auto; pushes pagination to the end of the page. */
   margin: auto 24px 0 24px;
