--- a/src/twilio/components/Buttons/Chatbody.module.css
+++ b/src/twilio/components/Buttons/Chatbody.module.css
@@ -45,7 +45,7 @@
   justify-content: center;
   align-items: center;
 }
-.footerdiv {
+.chatDetail {
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
 }
