--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -150,6 +150,20 @@
   font-size: 17px;
   padding: 5px;
 }
+.loading {
+  width: 100%;
+  margin: 24px auto;
+  /* overflow-x: hidden; */
+
+  @media (--viewportMedium) {
+    margin: 48px auto;
+  }
+
+  @media (--viewportLarge) {
+    margin: 50px auto;
+    max-width: 1040px;
+  }
+}
 .lformrow {
   /* top: 286px;
   left: 64px;
@@ -165,7 +179,7 @@
 
   @media (--viewportLarge) {
     margin: 50px auto;
-    max-width: 1040px;
+    max-width: 1200px;
   }
   /* background: #ffffff 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
@@ -175,7 +189,7 @@
   flex-direction: row;
   /* margin-left: 490px;
   margin-right: 490px; */
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .statusFilter {
   top: 286px;
