--- a/src/twilio/components/Buttons/Chatbody.module.css
+++ b/src/twilio/components/Buttons/Chatbody.module.css
@@ -74,7 +74,7 @@
   font-weight: 400;
   background: #eee;
   border: 0;
-  margin-left: 14px;
+  /* margin-left: 14px; */
 }
 .chatinput button {
   background: var(--marketplaceColor);
@@ -83,7 +83,7 @@
   color: #fff;
   font-size: 14px;
   cursor: pointer;
-  margin-right: 14px;
+  /* margin-right: 14px; */
 }
 .chatboxvs {
   padding: 15px;
