--- a/src/twilio/components/Buttons/ChatButton.module.css
+++ b/src/twilio/components/Buttons/ChatButton.module.css
@@ -1,4 +1,5 @@
 .chbtntw {
+  position: relative;
 }
 .chbtntw .button {
   padding: 14px 15px;
@@ -18,4 +19,38 @@
   height: 24px;
   width: 22px;
   margin: 0;
+}
+.notificationDot {
+  /* Dimensions */
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+
+  /* Position */
+  position: absolute;
+  top: 17px;
+  right: 12px;
+
+  /* Style: red dot */
+  background-color: var(--failColor);
+
+  animation-name: notificationPop;
+  animation-duration: 0.1s;
+  animation-delay: 0.1s;
+  animation-fill-mode: forwards;
+
+  animation-timing-function: ease-in;
+  opacity: 0;
+  transform: scale(0);
+}
+
+@keyframes notificationPop {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
