--- a/src/components/SalesCard/SalesCard.module.css
+++ b/src/components/SalesCard/SalesCard.module.css
@@ -143,7 +143,7 @@
   margin: 20px 0;
   border-left: 7px solid #a91722;
   position: relative;
-  min-height: 100%;
+  /* min-height: 100%; */
   @media (max-width: 575px) {
     flex-direction: column;
   }
