clientid form end time css fixed

--- a/src/forms/EditListingClientIdForm/EditListingClientIdForm.module.css
+++ b/src/forms/EditListingClientIdForm/EditListingClientIdForm.module.css
@@ -104,3 +104,8 @@
     }
   }
 }
+.endTime :disabled {
+  border-bottom: 2px solid var(--successColor);
+  color: var(--matterColor);
+  cursor: not-allowed;
+}
