--- a/src/containers/MeetingNewPage/Meeting.css
+++ b/src/containers/MeetingNewPage/Meeting.css
@@ -49,12 +49,17 @@
   z-index: 99;
   padding: 20px 8px;
   @media (max-width: 991px) {
-    top: 30px;
+    top: 60px;
   }
 }
 .btnmod span span {
-  margin-right: 0;
+  margin: 0;
 }
+.btnmod span span svg{
+    font-size: 16px !important;
+    color: #fff;
+}
+    
 /* .btnmod span span svg {
   height: 28px;
   width: 30px;
@@ -64,11 +69,55 @@
   padding: 14px 0 !important;
 }
 button.vid-end-btn {
-  background: red;
+  background: #ea4335;
   color: #fff;
   border-radius: 30px;
   font-size: 22px;
+
+ 
   @media (max-width: 959px) {
     margin: 15px 0;
+  }
+}
+button.vid-end-btn:hover {
+  background: #eb5b4f;
+}
+.footer-mod{
+      background-color: #202124 !important;
+      padding-top: 12px !important;
+      padding-bottom: 12px !important;
+}
+.footer-mod p{
+  color: #fff;
+}
+.btnmod {
+  width: 40px;
+  height: 40px;
+  background-color: #3c4043 !important;
+  border-radius: 50px !important;
+  padding: 0 !important;
+  min-width: auto !important;
+  margin: 0 10px !important;
+}
+.btnmod:hover{
+  background: #43474a !important
+}
+.btnmod.active{
+background: #ea4335 !important
+}
+.btnmod  span{
+  padding: 0 !important;
+}
+.mob-inline{
+  align-items: center;
+}
+.mobsetting.btnmod{
+  color: #fff;
+  font-size: 18px;
+}
+.inner-right-mod{
+  @media (max-width: 575px) {
+      padding: 10px !important;
+
   }
 }
