--- a/src/containers/InboxPage/InboxPage.module.css
+++ b/src/containers/InboxPage/InboxPage.module.css
@@ -36,6 +36,10 @@
   }
 }
 
+.Appointmentlwm {
+  padding-top: 30px;
+}
+
 .navigation {
   /* Layout */
   display: flex;
@@ -49,23 +53,27 @@
   background-color: var(--matterColorLight);
   box-shadow: var(--boxShadow);
 
+  @media (max-width: 767px) {
+    padding: 0px 15px;
+  }
+
   @media (--viewportMedium) {
-    padding: 24px 24px 0 24px;
+    padding: 0px 24px 0 24px;
   }
 
   @media (--viewportLarge) {
-    padding: 113px 0 82px 36px;
+    padding: 0px 0 50px 36px;
     flex-direction: column;
     justify-content: flex-start;
     border: none;
     box-shadow: none;
     background-color: transparent;
   }
+
   @media (--viewportLargeWithPaddings) {
-    padding: 113px 0 82px calc((100% - 1056px) / 2);
+    padding: 30px 0 50px calc((100% - 1056px) / 2);
   }
 }
-
 .title {
   /* Font */
   @apply --marketplaceH1FontStyles;
@@ -76,6 +84,8 @@
   margin-bottom: 0;
 
   padding-bottom: 10px;
+  position: sticky;
+  top: 75px;
 
   @media (--viewportMedium) {
     padding-bottom: 10px;
@@ -94,14 +104,16 @@
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  position: sticky;
+  top: 110px;
 
   @media (--viewportMedium) {
-    padding-top: 12px;
+
     padding-top: 20px;
   }
 
   @media (--viewportLarge) {
-    padding-top: 53px;
+    padding-top:20px;
     flex-direction: column;
   }
 }
@@ -258,6 +270,17 @@
   }
 
   color: var(--matterColor);
+  
+
+  
+}
+.itemInfo span {
+  @media (max-width: 575px){
+    word-break: break-all;
+    font-size: 12px;
+    line-height: 16px;
+  }
+ 
 }
 
 .itemUsername {
