--- a/src/containers/MyAppointmentPage/MyAppointmentPage.module.css
+++ b/src/containers/MyAppointmentPage/MyAppointmentPage.module.css
@@ -35,7 +35,9 @@
     box-shadow: var(--boxShadowLight);
   }
 }
-
+.Appointmentlwm{
+  padding-top: 30px;
+}
 .navigation {
   /* Layout */
   display: flex;
@@ -49,12 +51,16 @@
   background-color: var(--matterColorLight);
   box-shadow: var(--boxShadow);
 
+  @media (max-width: 767px) {
+    padding: 0px 15px;
+  }
+
   @media (--viewportMedium) {
-    padding: 24px 24px 0 24px;
+    padding: 0px 24px 0 24px;
   }
 
   @media (--viewportLarge) {
-    padding: 113px 0 82px 36px;
+    padding: 0px 0 50px 36px;
     flex-direction: column;
     justify-content: flex-start;
     border: none;
@@ -62,7 +68,7 @@
     background-color: transparent;
   }
   @media (--viewportLargeWithPaddings) {
-    padding: 113px 0 82px calc((100% - 1056px) / 2);
+    padding: 0px 0 50px calc((100% - 1056px) / 2);
   }
 }
 
@@ -94,14 +100,16 @@
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  position: sticky;
+  top: 110px;
 
   @media (--viewportMedium) {
     padding-top: 12px;
-    padding-top: 20px;
+
   }
 
   @media (--viewportLarge) {
-    padding-top: 53px;
+    padding-top: 30px;
     flex-direction: column;
   }
 }
