--- a/src/forms/BookingTimeForm/FieldDateAndTimeInput.module.css
+++ b/src/forms/BookingTimeForm/FieldDateAndTimeInput.module.css
@@ -42,7 +42,11 @@
     }
   }
 }
-
+.bookinghhmm {
+  @media (max-width: 767px) {
+    width: 100% !important;
+  }
+}
 .fieldDisabled {
   background: none;
   color: --matterColorNegative;
