--- a/src/components/LayoutWrapperSideNav/LayoutWrapperSideNav.module.css
+++ b/src/components/LayoutWrapperSideNav/LayoutWrapperSideNav.module.css
@@ -12,7 +12,7 @@
   box-shadow: var(--boxShadow);
 
   @media (--viewportLarge) {
-    padding: 109px 0 82px 36px;
+    padding: 0px 0 0 36px;
     flex-direction: column;
     justify-content: flex-start;
     border: none;
@@ -21,7 +21,7 @@
   }
 
   @media (--viewportLargeWithPaddings) {
-    padding: 109px 0 82px calc((100% - 1056px) / 2);
+    padding: 0 0 0 calc((100% - 1056px) / 2);
   }
 }
 
@@ -30,18 +30,18 @@
   flex-direction: row;
   overflow-x: auto;
   min-height: 48px;
-  padding-top: 2px;
+  padding-top: 30px;
+  position: sticky;
+  top: 110px;
 
   @media (--viewportMedium) {
     min-height: 56px;
-    padding-top: 10px;
   }
 
   @media (--viewportLarge) {
     min-height: auto;
     flex-direction: column;
     margin-top: 24px;
-    padding-top: 0;
   }
 }
 
