--- a/src/containers/ListingPage/ListingPage.module.css
+++ b/src/containers/ListingPage/ListingPage.module.css
@@ -266,6 +266,10 @@
   width: 60px;
   margin: 30px 0 20px;
 
+  @media (max-width: 767px) {
+    width: auto;
+  }
+
   /* @media (--viewportMedium) {
     position: absolute;
     top: -112px;
@@ -618,4 +622,7 @@
   width: fit-content;
   margin-bottom: 20px;
   font-size: 16px;
+  @media (max-width: 767px) {
+    margin-left: 25px;
+  }
 }
