--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -62,6 +62,10 @@
   @media (max-width: 1023px) {
     padding: 0 15px 20px;
   }
+  @media (max-width: 575px) {
+    font-size: 22px;
+    font-weight: 500;
+  }
 }
 
 .listingCards {
@@ -384,6 +388,15 @@
     padding-bottom: 0;
   }
 }
+.lastprice {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media (max-width: 575px) {
+    flex-direction: row;
+    width: 100%;
+  }
+}
 .rightlowerdiv {
   display: flex;
   flex-direction: column;
@@ -410,6 +423,10 @@
   color: #ffffff;
   font-weight: 500;
   cursor: pointer;
+  @media (max-width: 575px) {
+    flex-basis: 50%;
+    margin: 10px auto 0;
+  }
 }
 .price {
   padding: 20px;
@@ -417,6 +434,11 @@
   font-size: 25px;
   font-weight: bold;
   font-family: poppins;
+  @media (max-width: 575px) {
+    padding: 10px 0 10px 0;
+    font-size: 20px;
+    margin: 0 0 0 auto;
+  }
 }
 .togglemenu {
   position: absolute;
