--- a/src/containers/Salespage/Salespage.module.css
+++ b/src/containers/Salespage/Salespage.module.css
@@ -60,7 +60,7 @@
   }
 
   @media (--viewportLarge) {
-    padding: 0px 0 50px 36px;
+    padding: 0px 0 0 36px;
     flex-direction: column;
     justify-content: flex-start;
     border: none;
@@ -69,7 +69,7 @@
   }
 
   @media (--viewportLargeWithPaddings) {
-    padding: 0px 0 50px calc((100% - 1056px) / 2);
+    padding: 0px 0 0 calc((100% - 1056px) / 2);
   }
 }
 
@@ -106,7 +106,6 @@
 
   @media (--viewportMedium) {
     padding-top: 12px;
-
   }
 
   @media (--viewportLarge) {
