--- a/src/forms/BookingTimeForm/BookingTimeForm.module.css
+++ b/src/forms/BookingTimeForm/BookingTimeForm.module.css
@@ -92,12 +92,23 @@
 .disclaimercheckbox {
   display: flex;
   flex-direction: row;
+  margin-bottom: 20px;
+  @media (max-width: 767px) {
+    align-items: center;
+    padding: 0 25px;
+  }
 }
 .disclaimer {
   margin-bottom: 10px;
+  word-break: break-all;
+  @media (max-width: 767px) {
+    padding: 60px 0 20px;
+  }
 }
 .disclaimerLink {
-  margin-bottom: 10px;
+  @media (max-width: 767px) {
+    margin-bottom: 0;
+  }
 }
 .linkUl {
   border-bottom: 2px solid var(--attentionColor);
