design last change

--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -544,6 +544,9 @@
   font-size: 20px;
   font-weight: bold;
   padding-top: 45px;
+  @media (max-width: 575px) {
+    padding: 20px 0;
+  }
 }
 .righthorizontal {
   display: flex;
