--- a/src/components/Topbar/Topbar.module.css
+++ b/src/components/Topbar/Topbar.module.css
@@ -7,8 +7,8 @@
   z-index: var(--zIndexTopbar);
   position: relative;
 
-  @media (max-width: 575px){
-      overflow-x: hiddin;
+  @media (max-width: 575px) {
+    overflow-x: hiddin;
   }
 }
 
@@ -86,6 +86,10 @@
 }
 .searchMenu {
   padding: 12px 24px;
+
+  @media (max-width: 575px) {
+    padding: 12px 14px 12px 24px;
+  }
 }
 
 .menuIcon,
