--- a/src/forms/EditListingClientIdForm/EditListingClientIdForm.module.css
+++ b/src/forms/EditListingClientIdForm/EditListingClientIdForm.module.css
@@ -96,8 +96,17 @@
 }
 .cdin {
   margin-bottom: 30px;
+  @media (max-width: 575px) {
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+  }
   & .cdinwd {
     width: 48%;
+    @media (max-width: 575px) {
+      width: 100%;
+      margin-bottom: 30px;
+    }
 
     & input {
       padding-bottom: 0;
