--- a/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
+++ b/src/forms/ProfileSettingsForm/ProfileSettingsForm.module.css
@@ -278,7 +278,6 @@
   }
 }
 
-
 .fileInfo {
   @apply --marketplaceH5FontStyles;
   color: #4e4e4e;
@@ -460,4 +459,8 @@
   width: auto;
   margin: 0 20px 0 0;
   transform: scale(2);
+}
+.serviceTime select {
+  border-width: 3px;
+  padding-bottom: 7px;
 }
