private offer with all tab done

--- a/src/containers/SearchPage/PromotionPage.module.css
+++ b/src/containers/SearchPage/PromotionPage.module.css
@@ -71,3 +71,36 @@
     padding: 0 36px 96px 36px;
   }
 }
+.tabs {
+  padding-top: 2px;
+
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  position: sticky;
+  top: 110px;
+
+  @media (--viewportMedium) {
+    padding-top: 12px;
+  }
+
+  @media (--viewportLarge) {
+    padding-top: 30px;
+    flex-direction: column;
+  }
+}
+
+.tab {
+  margin-left: 16px;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  @media (--viewportLarge) {
+    margin-left: 0;
+  }
+}
+.wrapperMain{
+  padding: 0 40px 0 40px;
+}
