--- a/src/forms/EditListingPricingForm/EditListingPricingForm.module.css
+++ b/src/forms/EditListingPricingForm/EditListingPricingForm.module.css
@@ -73,3 +73,54 @@
   font-size: 14px;
   color: #7a7a7a;
 }
+
+
+.selecthm {
+  display: flex;
+  & .hrtime {
+    flex-basis: 20%;
+    margin: 0 20px 0 0;
+    @media (max-width: 767px) {
+      flex-basis: 50%;
+    }
+  }
+  & .minime {
+    flex-basis: 20%;
+    @media (max-width: 767px) {
+      flex-basis: 50%;
+    }
+  }
+}
+.priceSimulator{
+  margin-top: 32px;
+  margin-bottom: 36px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 16px 0px;
+  border-radius: 4px;
+  border: 1px var(--matterColorAnti);
+  padding: 15px 24px;
+  border-radius: 8px;
+  & h2{
+    font-size: 24px;
+    color: #a91722;
+
+  }
+  & span{
+    font-size: 14px;
+  }
+
+  & > div{
+    display: flex;
+    flex-direction: row;
+
+    & > span:first-child{
+      flex-grow: 1;
+    }
+
+  }
+
+  & > div:last-child{
+    color: #a91722;
+    margin-top: 0.75rem;
+    margin-bottom: 1rem;
+  }
+}
