--- a/src/containers/ManageListingsPage/ManageListingsPage.module.css
+++ b/src/containers/ManageListingsPage/ManageListingsPage.module.css
@@ -483,3 +483,66 @@
 .openListingButton{
   cursor: pointer;
 }
+
+.clientIdSearchForm{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 46px;
+  padding-right: 0.5rem;
+  border: 1px solid #b6b5b5;
+  border-radius: 4px;
+
+  & img{
+    width: 26px;
+    height:26px;
+    object-fit:contain;
+    transform:scale(0.9);
+  }
+
+  & button{
+    width: 32px;
+    height: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    flex-shrink: 0;
+    color:#a6a6a6;
+    border: 0;
+    position: relative;
+    cursor: pointer;
+    background-color: transparent;
+  }
+  & button:disabled{
+    pointer-events: none;
+  }
+
+  & input{
+    border: 0px;
+    padding-left:0.5rem;
+    padding-right: 1px;
+  }
+  & > button:last-child{
+    margin-left: 0.25rem;
+  }
+  & > button:last-child::after{
+    content: "";
+    position: absolute;
+    height:28px;
+    width: 1px;
+    background-color:#a6a6a6;
+    top:1px;
+    left:-5px;
+  }
+
+}
+
+.activeClientIdSearchForm{
+  border:2px solid #2684ff !important;
+
+  & > button:nth-child(2){
+    color:var(--matterColor)
+  }
+}
