--- a/src/components/BookingPanel/BookingPanel.module.css
+++ b/src/components/BookingPanel/BookingPanel.module.css
@@ -184,6 +184,10 @@
   /* 3D painting container helps scrolling */
   transform: translate3d(0, 0, 0);
 
+  @media (max-width: 767px) {
+    padding: 18px 6px 18px 5px;
+  }
+
   @media (--viewportMedium) {
     padding: 18px 60px 18px 60px;
   }
