--- a/src/components/EditListingDeadlinePanel/EditListingDeadlinePanel.module.css
+++ b/src/components/EditListingDeadlinePanel/EditListingDeadlinePanel.module.css
@@ -9,13 +9,14 @@
 
 .form {
   flex-grow: 1;
+  min-height: 100vh;
   & input {
-    max-width: 30%;
+    max-width: 100%;
     @media (max-width: 767px) {
-      max-width: 60%;
+      max-width: 38%;
     }
     @media (max-width: 575px) {
-      max-width: 100%;
+      max-width: 90%;
     }
   }
 }
