--- a/src/components/FieldDateInput/DateInput.module.css
+++ b/src/components/FieldDateInput/DateInput.module.css
@@ -43,7 +43,7 @@
 
     @media (--viewportMedium) {
       padding: 4px 0 1px 26px;
-      border-bottom-width: 3px;
+      border-bottom-width: 2px;
     }
   }
 
@@ -282,7 +282,10 @@
     /* Similar problem as in issue: https://github.com/airbnb/react-dates/issues/947 */
     top: 34px !important;
     border-top: 2px solid var(--matterColorDark);
-    min-height: calc(100vh - 252px + 2px);
+    /* min-height: calc(100vh - 252px + 2px); */
+    @media (max-width: 767px) {
+      min-height: auto;
+    }
 
     @media (--viewportMedium) {
       /* !important is added to top because react-dates uses inline style for height */
