--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -626,6 +626,10 @@
 .pagination a {
   padding: 10px;
   margin: 8px;
+
+  @media (max-width: 575px) {
+    padding: 5px;
+  }
 }
 .pagination a:hover {
   color: #df4450;
