--- a/src/forms/BookingTimeForm/BookingTimeForm.module.css
+++ b/src/forms/BookingTimeForm/BookingTimeForm.module.css
@@ -102,7 +102,7 @@
   margin-bottom: 10px;
   word-break: break-all;
   @media (max-width: 767px) {
-    padding: 60px 0 20px;
+    padding: 20px 0;
   }
 }
 .disclaimerLink {
