reset password link otp done

--- a/src/forms/PasswordResetForm/PasswordResetForm.module.css
+++ b/src/forms/PasswordResetForm/PasswordResetForm.module.css
@@ -7,3 +7,16 @@
   @apply --marketplaceModalPasswordMargins;
   margin-bottom: 24px;
 }
+.otp{
+  margin-bottom: 20px;
+}
+.otpErrMsg {
+  margin-top: 6px;
+  margin-bottom: 10px;
+  color: var(--failColor);
+  overflow: hidden;
+  font-weight: var(--fontWeightMedium);
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0;
+}
