--- a/src/forms/PasswordChangeForm/PasswordChangeForm.module.css
+++ b/src/forms/PasswordChangeForm/PasswordChangeForm.module.css
@@ -83,3 +83,14 @@
   font-weight: var(--fontWeightBold);
   word-wrap: break-word;
 }
+
+.otpErrMsg {
+  margin-top: 6px;
+  margin-bottom: 10px;
+  color: var(--failColor);
+  overflow: hidden;
+  font-weight: var(--fontWeightMedium);
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0;
+}
