email template fixed

--- a/process1/templates/booking-reschedule-by-provider/booking-reschedule-by-provider-html.html
+++ b/process1/templates/booking-reschedule-by-provider/booking-reschedule-by-provider-html.html
@@ -7,7 +7,7 @@
         {{#with transaction}}
     
         <h3>Consultation - Rescheduled: {{listing.title}}</h3>
-        <p>Hi {{provider.display-name}},</p>
+        <p>Hi {{customer.display-name}},</p>
 
         <p>Your booking for {{listing.title}} has been rescheduled by {{customer.display-name}} and new booking time is : {{> format-date date=booking.start}}</p>
 
