--- a/process1/templates/consultation-over-provider/consultation-over-provider-html.html
+++ b/process1/templates/consultation-over-provider/consultation-over-provider-html.html
@@ -6,7 +6,7 @@
       <body style="font-family: sans-serif;">
         {{#with transaction}}
     
-        <h3>Consultation - Rescheduled: {{listing.title}}</h3>
+        <h3>Consultation - Over: {{listing.title}}</h3>
         <p>Hi {{provider.display-name}},</p>
 
         <p>You succesfully have completed the Consultation</p>
