--- a/src/containers/SearchPage/SearchPage.module.css
+++ b/src/containers/SearchPage/SearchPage.module.css
@@ -31,6 +31,7 @@
 }
 
 .searchResultContainer {
+  /* background-image: url(../../assets/Header_Image.png); */
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -46,6 +47,8 @@
   }
 
   @media (--viewportLarge) {
+    background-image: url(../../assets/Header_Image.png);
+    background-size: cover;
     flex-basis: 62.5%;
     padding: 23px 0 0 0;
   }
@@ -250,12 +253,13 @@
   }
   & h2 {
     text-align: center;
-    color: #000;
+    color: #fff;
     font-size: 48px;
     font-weight: 600;
     margin: 0 0 26px;
     @media (max-width: 767px) {
       font-size: 38px;
+      color: #000;
     }
     @media (max-width: 575px) {
       font-size: 28px;
@@ -264,13 +268,14 @@
   }
   & p {
     text-align: center;
-    color: #000;
+    color: #fff;
     font-size: 24px;
     font-weight: lighter;
     letter-spacing: 1px;
     margin: 0 0 50px;
     @media (max-width: 767px) {
       font-size: 18px;
+      color: #000;
     }
     @media (max-width: 575px) {
       font-size: 16px;
@@ -304,9 +309,13 @@
         }
       }
       & label {
-        color: #000;
+        color: #fff;
         padding: 0 0 10px;
         font-weight: 500;
+        @media (max-width: 767px) {
+          font-size: 15px;
+          color: #000;
+        }
       }
     }
     & .formcontrol {
